--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-scroll-parallax": "^2.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
